--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,7 @@ project(unix CXX)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(unix main.cpp)
+add_executable(unix main.cpp
+        include/state.h
+)
 
