c++ 11버전에 대응

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,10 @@
 cmake_minimum_required(VERSION 4.0)
 project(unix CXX)
 
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 11)
 
 add_executable(unix main.cpp
         include/state.h
+        include/utils.h
 )
 
